--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
         }
     },
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.4",
         "ext-bcmath": "*",
         "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "friendsofphp/php-cs-fixer": "2.16"
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "config": {
         "sort-packages": true,
